--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "React-Native-Building-a-Mini-Game",
     "slug": "React-Native-Building-a-Mini-Game",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
